@@ -1,7 +1,9 @@
 
+import java.io.File;
 import java.io.IOException;
 import java.nio.file.Files;
 import java.nio.file.Path;
+import java.nio.file.Paths;
 import java.util.HashMap;
 import java.util.regex.Matcher;
 import java.util.regex.Pattern;
@@ -16,6 +18,15 @@ import org.eclipse.jgit.api.errors.GitAPIException;
 
 public class FreshenVersion {
 
+    private static Pattern reIntepolation = Pattern
+            .compile("%%|" +
+                    "%\\{\\s*" +
+                    "([^\\[}+]+)\\s*" +
+                    "(?:\\[\\s*(-?\\d+)\\s*(:\\s*(-?\\d+)\\s*)?\\])?\\s*" +
+                    "([-+]?\\d+)?\\s*" +
+                    "\\}");
+    private static Pattern reLine = Pattern.compile("(.*?)(?:\\r\\n?|\\n|$)");
+
     private static CommandLine parseArgs(String[] args) {
         final Options options = new Options();
         options.addOption("?", "help", false, "print this message");
@@ -25,8 +36,8 @@ public class FreshenVersion {
         options.addOption("p", "pad", true, "pad character or chacter escape: \" \" or \"\\0\"");
         options.addOption("R", "revision", true, "padded width of revision");
         options.addOption("r", "right", false, "right justify version/revision with padding");
-        options.addOption("t", "template", true, "template file: defaults to build-in template");
         options.addOption("V", "version", true, "padded width of version");
+        options.addOption("z", "shebang", false, "stitch together the shebang exploded file name");
 
         CommandLineParser parser = new DefaultParser();
 
@@ -41,7 +52,7 @@ public class FreshenVersion {
         HelpFormatter formatter = new HelpFormatter();
         formatter.printHelp("CLITester", options);
 
-        System.exit(-3);
+        System.exit(-1);
         return null;
     }
 
@@ -81,54 +92,148 @@ public class FreshenVersion {
 
     }
 
-    public static void main(String[] args) {
+    /**
+     * replaces interpoltations of the form %{key} or %{key[x:y]} where key is in
+     * replacments
+     * 
+     * @param source
+     * @param template
+     * @param replacements
+     * @param padCharSeq
+     * @return
+     * @throws InvalidTemplateVariable
+     */
+    private static String applyReplacements(
+            String source,
+            String template,
+            HashMap<String, String> replacements,
+            String padCharSeq) throws InvalidTemplateVariable {
 
-        CommandLine opt = FreshenVersion.parseArgs(args);
+        StringBuilder contentBuilder = new StringBuilder();
 
-        RepoReview repoReview = new RepoReview();
+        // String[] lines = template.split("\n");
 
-        try {
-            repoReview.inspect();
-        } catch (MissingRepoException e) {
-            System.out.println(e.getMessage());
-            System.exit(-1);
-        } catch (NoRepoHistoryException e) {
-            System.out.println(e.getMessage());
-            System.exit(-2);
-        } catch (GitAPIException e) {
-            e.printStackTrace();
-            System.exit(-9);
+        int nLine = 0;
+
+        Matcher lines = FreshenVersion.reLine.matcher(template);
+
+        while (lines.find()) {
+            nLine++;
+            String line = lines.group(0);
+
+            if (nLine == 1 && lines.group(0).startsWith("#")) {
+                continue;
+            }
+
+            Matcher intepolations = FreshenVersion.reIntepolation.matcher(line);
+
+            while (intepolations.find()) {
+                String variableName = intepolations.group(1);
+                String index1 = intepolations.group(2);
+                String range = intepolations.group(3);
+                String index2 = intepolations.group(4);
+                String offset = intepolations.group(5);
+
+                String replaceWith = "%";
+                int start;
+                int stop;
+
+                if (variableName != null) {
+                    if (replacements.containsKey(variableName)) {
+                        replaceWith = replacements.get(variableName);
+                    } else if (variableName.equals("line")) {
+                        int nOffset = 1;
+                        if (offset != null) {
+                            nOffset = Integer.parseInt(offset);
+                        }
+                        replaceWith = Integer.toString(nLine + nOffset);
+                    } else {
+                        throw new InvalidTemplateVariable(source, nLine, variableName);
+                    }
+                }
+
+                start = 0;
+                stop = replaceWith.length();
+
+                if (range != null) {
+                    if (index1 != null) {
+                        start = Integer.parseInt(index1);
+                    }
+                    if (index2 != null) {
+                        stop = Integer.parseInt(index2);
+                    }
+
+                } else if (index1 != null) {
+                    start = Integer.parseInt(index1);
+                    stop = start + 1;
+                }
+
+                int nPad = 0;
+
+                if (start < 0) {
+                    start += replaceWith.length();
+                    if (start < 0) {
+                        start = 0;
+                    }
+                }
+
+                if (stop < 0) {
+                    stop += replaceWith.length();
+                }
+
+                if (stop < start) {
+                    stop = start;
+                }
+
+                if (stop > replaceWith.length()) {
+                    nPad = stop - replaceWith.length();
+                    stop = replaceWith.length();
+                }
+
+                if (start > replaceWith.length()) {
+                    nPad -= start - replaceWith.length();
+                    start = replaceWith.length();
+                }
+
+                replaceWith = replaceWith.substring(start, stop) + padCharSeq.repeat(nPad);
+
+                intepolations.appendReplacement(contentBuilder, Matcher.quoteReplacement(replaceWith));
+
+            }
+            intepolations.appendTail(contentBuilder);
+
         }
 
-        String version = FreshenVersion.pad("version", repoReview.tagVersion, opt);
-        String revision = FreshenVersion.pad("revision", repoReview.revision, opt);
+        return contentBuilder.toString();
 
-        System.out.printf("version: \"%s\"\n", version);
-        System.out.printf("rev: \"%s\"\n", revision);
+    }
 
-        HashMap<String, String> replacements = new HashMap<>();
+    private static void writeTemplatesToFiles(
+            String[] sourceFiles,
+            String outputFile,
+            String version,
+            String revision,
+            boolean forceNewContent,
+            String padCharSeq) throws InvalidTemplateVariable, ReadTemplateException, WriteOutputFileException {
 
-        replacements.put("warning", "*** DO NOT EDIT *** Generated by mplab.git.help.FreshenVersion");
+        HashMap<String, String> replacements = new HashMap<String, String>();
+
+        replacements.put("warning", "*** DO NOT EDIT *** Generated by mplab-git-help.jar FreshenVersion");
         replacements.put("version", version);
         replacements.put("V", version);
         replacements.put("revision", revision);
         replacements.put("R", revision);
 
-        Pattern reIntepolation = Pattern
-                .compile("%%|%\\{(\\s*[^\\[}]+)\\s*(?:\\[\\s*(\\d+)\\s*(:\\s*(\\d+)\\s*)?\\])?}");
-
         String template = null;
-        String source;
+        // String source;
 
         String originalContent = null;
         String newContent = null;
-        boolean forceNewContent = opt.hasOption("force");
 
-        Path outputPath = Path.of("version.c");
+        // TODO: Check if works drive letter in outputFile
+        Path outputPath = Paths.get(outputFile);
 
-        if (opt.hasOption("out")) {
-            outputPath = Path.of(opt.getOptionValue("out"));
-        }
+        replacements.put("file", outputFile);
 
         if (!forceNewContent) {
             try {
@@ -139,105 +244,150 @@ public class FreshenVersion {
             }
         }
 
-        if (opt.hasOption("template")) {
-            source = opt.getOptionValue("template");
-            replacements.put("source", String.format("template:", source));
-            Path templatePath = Path.of(opt.getOptionValue("template"));
-            try {
-                template = Files.readString(templatePath);
-            } catch (IOException e) {
-                System.out.printf("Error can't open template file: \"%s\"\n", templatePath);
-            }
+        if (sourceFiles.length == 0) {
 
-        } else {
-            source = "FreshenVersion.java";
-            replacements.put("source", "FreshenVersion built-in template");
+            String source = "FreshenVersion built-in template";
+            replacements.put("source", source);
 
             template = String.join("\r\n",
+
                     "// %{warning}",
+                    "// File: %{file}",
+                    "// template: %{source}",
                     "// see: https://github.com/jgladen/mplab-git-help",
-                    "// %{source}",
-                    "// %%{source}",
                     "",
                     "#include \"version.h\"",
                     "",
                     "const char __attribute__((section(\"version\"))) GIT_VERSION[32] = \"%{version}\";",
                     "const char __attribute__((section(\"version\"))) GIT_REVISION[32] = \"%{revision}\";",
+                    "// %{warning}",
                     "");
-        }
 
-        Matcher intepolations = reIntepolation.matcher(template);
-        StringBuilder contentBuilder = new StringBuilder();
-        String pad = opt.getOptionValue("pad", " ");
+            newContent = FreshenVersion.applyReplacements(source, template, replacements, padCharSeq);
 
-        while (intepolations.find()) {
-            String variableName = intepolations.group(1);
-            String index1 = intepolations.group(2);
-            String range = intepolations.group(3);
-            String index2 = intepolations.group(4);
-            String replaceWith = "%";
-            int nLine = 1; // TODO: real line number
-            int start;
-            int stop;
+        } else {
+            newContent = "";
+            for (String source : sourceFiles) {
 
-            if (variableName != null) {
-                if (!replacements.containsKey(variableName)) {
-                    System.out.printf("%s:%d Invalid template varible name \"%s\"\n", source, nLine, variableName);
-                    System.exit(-4);
-                }
-                replaceWith = replacements.get(variableName);
-            }
+                source = source.replace("\\", "/");
 
-            start = 0;
-            stop = replaceWith.length();
+                replacements.put("source", source);
+                System.out.printf("source \"%s\"\n", source);
+                Path templatePath = Paths.get(new File(source).toURI());
 
-            if (range != null) {
-                if (index1 != null) {
-                    start = Integer.parseInt(index1);
-                }
-                if (index2 != null) {
-                    stop = Integer.parseInt(index2);
+                try {
+                    template = Files.readString(templatePath);
+                } catch (IOException e) {
+                    throw new ReadTemplateException(source);
                 }
 
-            } else if (index1 != null) {
-                start = Integer.parseInt(index1);
-                stop = start + 1;
+                newContent += FreshenVersion.applyReplacements(source, template, replacements, padCharSeq);
             }
-
-            int nPad = 0;
-
-            if (stop < start) {
-                stop = start;
-            }
-
-            if (stop > replaceWith.length()) {
-                nPad = stop - replaceWith.length();
-                stop = replaceWith.length();
-            }
-
-            if (start > replaceWith.length()) {
-                nPad -= start - replaceWith.length();
-                start = replaceWith.length();
-            }
-
-            replaceWith = replaceWith.substring(start, stop) + pad.repeat(nPad);
-
-            intepolations.appendReplacement(contentBuilder, Matcher.quoteReplacement(replaceWith));
 
         }
-        intepolations.appendTail(contentBuilder);
-
-        newContent = contentBuilder.toString();
 
         if (forceNewContent || !newContent.equals(originalContent)) {
             System.out.printf("writing new: %s\n", outputPath);
             try {
                 Files.writeString(outputPath, newContent);
             } catch (IOException e) {
-                System.out.printf("Failed to open output file for writing: %s\n", outputPath);
+                throw new WriteOutputFileException(outputFile);
             }
         } else {
             System.out.printf("checked: %s\n", outputPath);
+        }
+
+    }
+
+    public static void main(String[] args) {
+        try {
+
+            CommandLine opt = FreshenVersion.parseArgs(args);
+
+            RepoReview repoReview = new RepoReview();
+
+            repoReview.inspect();
+
+            String[] templateFiles;
+
+            if (opt.hasOption("shebang")) {
+                templateFiles = new String[1];
+                templateFiles[0] = String.join(" ", opt.getArgs());
+            } else {
+                templateFiles = opt.getArgs();
+            }
+
+            String version = FreshenVersion.pad("version", repoReview.tagVersion, opt);
+            String revision = FreshenVersion.pad("revision", repoReview.revision, opt);
+
+            System.out.printf("version: \"%s\"\n", version);
+            System.out.printf("rev: \"%s\"\n", revision);
+
+            if (opt.hasOption("out")) {
+                FreshenVersion.writeTemplatesToFiles(
+                        templateFiles,
+                        opt.getOptionValue("out"),
+                        version,
+                        revision,
+                        opt.hasOption("force"),
+                        opt.getOptionValue("pad", " "));
+            } else if (templateFiles.length==0){
+                FreshenVersion.writeTemplatesToFiles(
+                        new String[]{},
+                        "version.c",
+                        version,
+                        revision,
+                        opt.hasOption("force"),
+                        opt.getOptionValue("pad", " "));
+            }else {
+                String[] outputFiles = new String[templateFiles.length];
+
+                // Need matching output file name for each input template file
+                Pattern reTemplateFilename = Pattern.compile("^(.+)\\.git-help-template$", Pattern.CASE_INSENSITIVE);
+                for (int nFile = 0; nFile < outputFiles.length; nFile++) {
+                    Matcher m = reTemplateFilename.matcher(templateFiles[nFile]);
+                    if (!m.matches()) {
+                        throw new SelectOutputFileException(templateFiles[nFile]);
+                    }
+                    outputFiles[nFile] = m.group(1);
+                }
+
+                for (int nFile = 0; nFile < outputFiles.length; nFile++) {
+                    FreshenVersion.writeTemplatesToFiles(
+                        new String[]{templateFiles[nFile]},
+                        outputFiles[nFile],
+                        version,
+                        revision,
+                        opt.hasOption("force"),
+                        opt.getOptionValue("pad", " "));
+                }
+            }
+
+        } catch (
+                MissingRepoException
+                | NoRepoHistoryException
+                | SelectOutputFileException
+                | ReadTemplateException
+                | InvalidTemplateVariable
+                | WriteOutputFileException
+                | GitAPIException e) {
+            System.out.println("FreshenVersion: " + e.getMessage());
+            if (e instanceof MissingRepoException) {
+                System.exit(-2);
+            } else if (e instanceof NoRepoHistoryException) {
+                System.exit(-3);
+            } else if (e instanceof SelectOutputFileException) {
+                System.exit(-4);
+            } else if (e instanceof ReadTemplateException) {
+                System.exit(-5);
+            } else if (e instanceof InvalidTemplateVariable) {
+                System.exit(-6);
+            } else if (e instanceof WriteOutputFileException) {
+                System.exit(-7);
+            } else if (e instanceof GitAPIException) {
+                e.printStackTrace();
+                System.exit(-9);
+            }
         }
 
     }
